# dbt-graph-bridge

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dbt/adapters/graphbridge/: __init__.py  column.py  connections.py  graph_engines.py  impl.py  relation.py  sql_engines.py  type_mapping.py
dbt/include/graphbridge/: dbt_project.yml
dbt/include/graphbridge/macros/adapters/: cypher_generation.sql  indexes.sql  metadata.sql
dbt/include/graphbridge/tests/: graph_connected.sql  graph_no_self_loop.sql  graph_relationship_cardinality.sql
docs/: SPECIFICATION.md
examples/duckdb_to_neo4j/: .user.yml  dbt_project.yml  profiles.yml
examples/duckdb_to_neo4j/models/graph_nodes/: ceo_node.sql  city_node.sql  company_node.sql  country_node.sql  department_node.sql.disabled  dummy_node.sql.disabled  industry_node.sql  person_node.sql
examples/duckdb_to_neo4j/models/graph_relationships/: belongs_to_rel.sql  headquartered_in_rel.sql  led_by_rel.sql  located_in_rel.sql  subsidiary_of_rel.sql  works_in_rel.sql.disabled
examples/duckdb_to_neo4j/models/staging/: stg_departments.sql  stg_employees.sql  stg_forbes_g2k.sql
examples/duckdb_to_neo4j/seeds/: Forbes_Global_2000_2026.csv  departments.csv  employees.csv
examples/rdb_to_neo4j/: README.md  dbt_project.yml  profiles.yml
examples/rdb_to_neo4j/macros/: sql_compat.sql
examples/rdb_to_neo4j/models/graph_nodes/: ceo_node.sql  city_node.sql  company_node.sql  country_node.sql  industry_node.sql
examples/rdb_to_neo4j/models/graph_relationships/: belongs_to_rel.sql  headquartered_in_rel.sql  led_by_rel.sql  located_in_rel.sql
examples/rdb_to_neo4j/models/staging/: stg_companies.sql
examples/rdb_to_neo4j/seeds/: companies.csv
examples/terraform-neptune/: .gitignore  README.md  main.tf  notebook-on-start.sh.tftpl  outputs.tf  variables.tf
tests/unit/: test_graph_engines.py  test_imports.py  test_sql_routing.py
(+12 files in other folders)
