[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-graph-bridge"
version = "0.1.0"
description = "dbt adapter that bridges RDB sources to graph databases (Neo4j, etc.)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "dbt-adapters>=1.0.0,<2.0.0",
    "dbt-common>=1.0.0,<2.0.0",
    "neo4j>=5.0.0,<6.0.0",
    "pyarrow>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "dbt-tests-adapter>=1.0.0",
    "black",
    "ruff",
    "mypy",
]

[project.entry-points."dbt.adapter"]
graphbridge = "dbt.adapters.graphbridge"

[tool.setuptools.packages.find]
include = ["dbt", "dbt.*"]

[tool.setuptools.package-data]
"*" = ["*.sql", "*.yml", "*.md"]
